force-app/main/default/objects/Opportunity_Cluster__c.object
<CustomObject>
    <description>To create an Opportunity Hierarchy, Parent Opportunity or Opportunity Bundles</description>
    <fields>
        <fullName>Allocated_Amount__c</fullName>
        <description>Amount Allocated via Internal Collaborators</description>
        <inlineHelpText>Amount Allocated via Internal Collaborators</inlineHelpText>
        <label>Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cluster_Status__c</fullName>
        <description>Status of the Opportunity Cluster based on child opportunities</description>
        <formula>IF(AND(Count_of_Opportunities__c &gt; 0, Open_Opportunities__c = 0) , &apos;Closed&apos;, &apos;Open&apos;)</formula>
        <inlineHelpText>Status of the Opportunity Cluster based on child opportunities</inlineHelpText>
        <label>Cluster Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of attached opportunities</description>
        <inlineHelpText>The Count of Opportunities may differ if the Cluster has some private or limited Opportunities you don&apos;t have visibility of</inlineHelpText>
        <label>Count of Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Opportunity Grouping Description</description>
        <inlineHelpText>Opportunity Grouping Description</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Opportunities__c</fullName>
        <description>Total Number of Closed - Lost Opportunities in the Grouping</description>
        <inlineHelpText>Total Number of Closed - Lost Opportunities in the Grouping</inlineHelpText>
        <label>Lost Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Opportunities__c</fullName>
        <description>Total Number of Open Opportunities in the Grouping</description>
        <inlineHelpText>Total Number of Open Opportunities in the Grouping</inlineHelpText>
        <label>Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PURE_Application_ID__c</fullName>
        <description>As a UniCRM Enterprise user, I want to know that when a PURE application comes into UniCRM, it is matched to the correct UniCRM cluster.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter the Pure Application ID for this Cluster</inlineHelpText>
        <label>PURE Application ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PURE_Award_ID__c</fullName>
        <description>Award ID to be related to the Opportunity</description>
        <externalId>true</externalId>
        <label>PURE Award ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PURE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Closed (if all opportunities are Closed - Won or Closed - Lost); else = Open</description>
        <inlineHelpText>Closed (if all opportunities are Closed - Won or Closed - Lost); else = Open</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Amount of Opp Cluster based on attached opportunities</description>
        <inlineHelpText>The Total Opportunity Amount may differ if the Cluster has some private or limited Opportunities you don&apos;t have visibility of</inlineHelpText>
        <label>Total Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Won_Amount__c</fullName>
        <description>Sum of all amounts associated with all opportunities not in Closed - Lost stage</description>
        <inlineHelpText>Sum of all amounts associated with all opportunities not in Closed - Lost stage</inlineHelpText>
        <label>Won Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Won_Opportunities__c</fullName>
        <description>Total Number of Closed - Won Opportunities in the Grouping</description>
        <inlineHelpText>Total Number of Closed - Won Opportunities in the Grouping</inlineHelpText>
        <label>Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Cluster</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cluster_Status__c</columns>
        <columns>Count_of_Opportunities__c</columns>
        <columns>Open_Opportunities__c</columns>
        <columns>Won_Amount__c</columns>
        <columns>Won_Opportunities__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Opportunity_Clusters</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunity Clusters</label>
    </listViews>
    <nameField>
        <label>Cluster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Clusters</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Opportunity_Cluster_Pure_Record</fullName>
        <active>true</active>
        <description>Opportunity Cluster managed in Pure</description>
        <errorConditionFormula>AND(
		  ISPICKVAL(Source__c, &apos;PURE&apos;),
		  OR(
			ISCHANGED(Name),
			ISCHANGED(PURE_Application_ID__c)
			),
		  NOT(
			OR(
			  $Profile.Name = &apos;Integration - Mix Pure API&apos;,
			  $Profile.Name = &apos;System Administrator&apos;
			  )
			)
		)</errorConditionFormula>
        <errorMessage>Please note that this is a PURE Opportunity Cluster so only limited fields can be edited/updated in UniCRM.</errorMessage>
    </validationRules>
</CustomObject>